# oggex

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakePresets.json  Features.md  README.md  build_cmake.sh  cmake  gtk4.sh  meson.build  oggex.hpp.in  presets  run_gtk_app.sh
app/: CMakeLists.txt  cli.c  embed.cpp  extract.cpp  main.cpp  meson.build  oggex-bin.cpp  oggex.cpp
app/gtk/: CMakeLists.txt  meson.build  oggex-config.h.in
app/gtk/src/: CMakeLists.txt  app.cpp  appwindow.cpp  embedwidget.c  embedwidget.cpp  extractwidget.c  extractwidget.cpp  filechooserbutton.c  main.c  main.cpp  meson.build  oggex-application.c  oggex-gtk.cpp  oggex-window.c  oggex.gresource.xml  oggex_defs.c
app/gtkmm/: CMakeLists.txt  io.github.com.jmdaemon.oggex.json  oggex-config.h.in
app/gtkmm/data/: io.github.com.jmdaemon.oggex.appdata.xml.in  io.github.com.jmdaemon.oggex.desktop.in  io.github.com.jmdaemon.oggex.gschema.xml  meson.build
app/gtkmm/data/icons/: meson.build
app/gtkmm/po/: POTFILES  meson.build
app/gtkmm/src/: CMakeLists.txt  app.cpp  appwindow.cpp  embedwidget.cpp  oggex-gtk.cpp  oggex.gresource.xml
app/qt/: CMakeLists.txt  datamodel.cpp  embedwidget.cpp  embedwidget.h  embedwidget.ui  extractwidget.cpp  filechooser.cpp  homewidget.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  meson.build  oggex-qt.cpp
app/qt/datamodel/: CMakeLists.txt  datamodel.h
app/qt/embedwidget/: CMakeLists.txt  embedwidget.cpp  embedwidget.h  embedwidget.ui
app/qt/mainwindow/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
app/qt/ui/: mainwindow.ui
include/: Version.h.in  cli.h  cli_defs.h  constants.h  media.h  oggex.h  ogx.h  ogxlog.h  sound.h
include/audio/: Audio.h  Cmd.h  EmbedAudio.h  ExtractAudio.h  FileType.tpp  Hash.h  metadata.hpp
include/file/: File.h
include/gtk/: app.h  appwindow.h  embedwidget.h  extractwidget.h  filechooserbutton.h  oggex-application.h  oggex-window.h  oggex_gtk.h  oggex_gtk_defs.h
include/gtkmm/: app.h
include/image/: Image.h  image.hpp
include/oggex/: oggex.h
include/qt/: datamodel.h  embedwidget.h  extractwidget.h  filechooser.h  homewidget.h  mainwindow.h  oggex_qt.h
include/ui/: AudioInputManager.h  Dashboard.h  DashboardID.h  DashboardWindow.h  Embed.h  EmbedWindow.h  FileSelect.h  FileSelectWindow.h  InterfaceID.h  MenuBar.h  OggexApp.h  Resources.h  SoundTagManager.h
include/util/: Audio.h  Cmd.h  Data.h  File.h  FileType.tpp  Image.h  InputParser.h  Mask.h  Options.h
include/utility/: Audio.h  Cmd.2.h  Data.h  File.h  Image.h
meson-subprojects/: jolly.wrap  utility.wrap
resources/: CMakeLists.txt
resources/gtk/: asdf  embedwidget.ui  embedwindow.2.ui  (+10 more)
scripts/: build.sh  build_cmake.sh  clean.sh  install.sh  install_opencv-deps.sh  ninja_make.sh  run_tests.sh
src/: CMakeLists.txt  meson.build  oggex.cpp  ogxlog.cpp
src/audio/: Audio.cpp  CMakeLists.txt  Cmd.cpp  EmbedAudio.cpp  ExtractAudio.cpp  File.cpp  Hash.cpp  Mask.cpp  TODO.md  base64.cpp  metadata.cpp
src/encoder/: BUILD  CMakeLists.txt  ogg-encoder.cpp
src/encoder/main/: ogg-encoder.cpp  ogg-encoder.hpp.in
src/file/: CMakeLists.txt  File.cpp
src/image/: CMakeLists.txt  Image.cpp  image.cpp
src/image/main/: Image.cpp  Image.hpp
src/oggex/: CMakeLists.txt  EmbedAudio.cpp  ExtractAudio.cpp  oggex.cpp  oggex.gresource.xml.in  resources
src/oggex/controller/: DashboardController.cpp  DashboardWindow.cpp  EmbedController.cpp  EmbedWindow.cpp
src/oggex/gtk3/: CMakeLists.txt  oggex.cpp  oggex.gresource.xml.in
src/oggex/gtk3/controller/: Dashboard.cpp  DashboardController.cpp  DashboardWindow.cpp  Embed.cpp  EmbedController.cpp  EmbedWindow.cpp  FileSelect.cpp  Menubar.cpp
src/oggex/gtk3/controls/: DashboardWindow.cpp  EmbedWindow.cpp  OggexApp.cpp
src/oggex/gtk3/view/: AudioInputManager.cpp  Menubar.cpp  Panel.cpp  SoundTagManager.cpp
src/oggex/gtk3/window/: EmbedWindow.cpp
src/oggex/qt5/: CMakeLists.txt
src/oggex/qt5/build-oggex-Desktop-Debug/: CMakeCache.txt  oggex
src/oggex/qt5/build-oggex-Desktop-Debug/.cmake/api/v1/reply/: cache-v2-734b3e567319453e30e8.json  codemodel-v2-4403e1dbd0768efb9264.json
src/oggex/qt5/build-oggex-Desktop-Debug/oggex_autogen/: deps
src/oggex/qt5/build-oggex-Desktop-Debug/oggex_autogen/EWIEGA46WW/: moc_mainwindow.cpp  moc_mainwindow.cpp.d
src/ui/: CMakeLists.txt
src/ui/gtk3/: CMakeLists.txt
src/ui/gtk3/view/: AudioInputManager.cpp  Panel.cpp
src/ui/gtk3/window/: DashboardWindow.cpp  FileSelectWindow.cpp  OggexWin.cpp
src/ui/qt/build-oggex-Desktop-Debug/: cmake_install.cmake
src/ui/qt/build-oggex-Desktop-Debug/.cmake/api/v1/reply/: target-oggex_autogen-Debug-100db7ba3dbcf70b6995.json
src/ui/qt5/build-oggex-Desktop-Debug/: .ninja_deps  .ninja_log  build.ninja
src/ui/qt5/build-oggex-Desktop-Debug/.cmake/api/v1/reply/: cmakeFiles-v1-70349a28e71e149c3617.json  index-2021-01-15T06-05-02-0672.json  target-oggex-Debug-b03c5b21aeec6b3a275a.json  target-oggex_autogen_timestamp_deps-Debug-722755b29cd0a0746a7c.json
src/ui/qt5/build-oggex-Desktop-Debug/oggex_autogen/include/: ui_mainwindow.h
src/util/: Audio.cpp  CMakeLists.txt  Cmd.cpp  Data.cpp  File.cpp  Image.cpp  InputParser.cpp  Mask.cpp
src/utility/: Audio.cpp  CMakeLists.txt  Cmd.cpp  Data.cpp  File.cpp  Image.cpp  command.c  file.c
subprojects/: CMakeLists.txt  utility
test/: CMakeLists.txt  catch.hpp  copy.py  doctest-main.cpp  doctest.cpp  doctest.hpp  meson.build  oggex_int.h.in  test_oggex.cpp  test_oggex_int.cpp
test/audio/: CMakeLists.txt  CmdTests.cpp  EmbedAudioTests.cpp  ExtractAudioTests.cpp  HashTests.cpp
test/decoder/: CMakeLists.txt  ExtractAudioTests.cpp
test/encoder/: CMakeLists.txt  ogg-encoder-tests.cpp
test/encoder/main/: ogg-encoder-tests.cpp
test/extract/: CMakeLists.txt  ExtractAudioTests.cpp
test/image/: CMakeLists.txt  image-tests.cpp
test/image/main/: image-tests.cpp
test/util/: AudioTests.cpp  CMakeLists.txt  CmdTests.cpp  ImageTests.cpp  MaskTests.cpp
test/utility/: AudioTests.cpp  CMakeLists.txt  CmdTests.cpp  DataTests.cpp  ImageTests.cpp  MaskTests.cpp
(+50 files in other folders)
